--- a/consult/index.html
+++ b/consult/index.html
@@ -6,10 +6,10 @@
         <link href='http://fonts.googleapis.com/css?family=PT+Serif:400,700,400italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="css/select2.min.css" rel="stylesheet">
-<!--        <link href="css/interface.css" rel="stylesheet">-->
+        <link href="css/styles.css" rel="stylesheet">
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <link rel="stylesheet/less" type="text/css" href="less/styles.less">
-        <script src="js/less.min.js"></script>
+<!--        <link rel="stylesheet/less" type="text/css" href="less/styles.less">-->
+<!--        <script src="js/less.min.js"></script>-->
         <script src="js/select2.min.js"></script>
         <script src="js/interface.js"></script>
         <script src="js/page_profile.js"></script>
