Обновлён cheat-sheet, автоматизирован рейтинг

--- a/consult/index.html
+++ b/consult/index.html
@@ -152,18 +152,7 @@
                         <p class="content">
                             Повседневная практика показывает, что укрепление и развитие структуры в значительной степени обуславливает создание модели развития. Повседневная практика показывает, что рамки и место обучения кадров представляет собой интересный эксперимент проверки существенных финансовых и административных условий.
                         </p>
-                        <div class="raiting-block">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star-o"></i>
-                            <i class="fa fa-star-o"></i>
-                            <i class="fa fa-star-o"></i>
-                            <i class="fa fa-star-o"></i>
-                        </div>
+                        <div class="rating-field" data-value="8" data-scale="10"></div>
                         <div class="author">
                             <div class="photo">
                                 <img src="images/photos/02.jpg" alt="" />
@@ -194,18 +183,7 @@
                         <p class="content">
                             Повседневная практика показывает, что укрепление и развитие структуры в значительной степени обуславливает создание модели развития. Повседневная практика показывает, что рамки и место обучения кадров представляет собой интересный эксперимент проверки существенных финансовых и административных условий.
                         </p>
-                        <div class="raiting-block">
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star"></i>
-                            <i class="fa fa-star-o"></i>
-                            <i class="fa fa-star-o"></i>
-                            <i class="fa fa-star-o"></i>
-                            <i class="fa fa-star-o"></i>
-                        </div>
+                        <div class="rating-field" data-value="3" data-scale="10"></div>
                         <div class="author">
                             <div class="photo">
                                 <img src="images/photos/02.jpg" alt="" />
@@ -237,20 +215,8 @@
                             <textarea name="review-content" class="allow-clear" placeholder="Напишите что-то хорошее о консультанте"></textarea>
                         </div>
                         <div class="field">
-                            <input type="hidden" name="raiting" value="0"/>
                             <label>Оцените консультанта</label>
-                            <div class="raiting-block edit">
-                                <i class="fa fa-star" data-value="1"></i>
-                                <i class="fa fa-star" data-value="2"></i>
-                                <i class="fa fa-star" data-value="3"></i>
-                                <i class="fa fa-star" data-value="4"></i>
-                                <i class="fa fa-star" data-value="5"></i>
-                                <i class="fa fa-star" data-value="6"></i>
-                                <i class="fa fa-star-o" data-value="7"></i>
-                                <i class="fa fa-star-o" data-value="8"></i>
-                                <i class="fa fa-star-o" data-value="9"></i>
-                                <i class="fa fa-star-o" data-value="10"></i>
-                            </div>
+                            <input type="hidden" name="rating" value="0" data-scale="10" />
                         </div>
                         <input type="submit" class="btn" value="Добавить отзыв" />
                     </form>
