--- a/consult/interface.html
+++ b/consult/interface.html
@@ -125,7 +125,7 @@
             <pre>&lt;div class=&quot;raiting-field&quot; data-scale=&quot;5&quot; data-value=&quot;2&quot;&gt;&lt;/div&gt;</pre>
             <div class="rating-field" data-scale="5" data-value="2"></div>
             <h4>Поле ввода рейтинга.</h4>
-            <p>input[name="raiting"]<br />Обязательные аттрибуты:<br />data-scale="10" - количество звёзд</p>
+            <p>input[name="raiting"]<br />Обязательные аттрибуты:<br />data-scale="10" - количество звёзд<br />Значение инпута name="rating" устанавливается при клике</p>
             <p>Пример:</p>
             <pre>&lt;input type=&quot;hidden&quot; name=&quot;rating&quot; data-scale=&quot;10&quot;/&gt;</pre>
             <input type="hidden" name="rating" data-scale="10"/>
