--- a/consult/page_profile.html
+++ b/consult/page_profile.html
@@ -13,6 +13,7 @@
         <script src="js/select2.min.js"></script>
         <script src="js/interface.js"></script>
         <script src="js/page_profile.js"></script>
+        <script src="js/ajax.js"></script>
 </head>
 <body class="default-template page-profile">
     <header class="header">
