--- a/di/index.html
+++ b/di/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<link href="css/styles.css" rel="stylesheet">
+		<link href="css/media.css" rel="stylesheet">
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.scroll-to.js"></script>
