--- a/di/index.html
+++ b/di/index.html
@@ -27,7 +27,7 @@
 					<div class="logo">
 						<img src="images/logo.png">
 					</div>
-					<h2>Духовная Интеграционика</h2>
+					<h2>Духовная <br> Интеграционика</h2>
 					<p>Откройте в себе скрытые ресурсы и способности и научитесь их использовать на 110%</p>
 					<ul>
 						<li>Получите простую и практичную технологию быстрого исправления того, что в вашей жизни идёт не так</li>
