--- a/di/index.html
+++ b/di/index.html
@@ -13,10 +13,10 @@
 		<div class="fixed-menu-container">
 			<div class="fixed-menu">
 				<ul class="menu">
-					<li><a href="#" class="scroll-to" data-target=".block1 h2">Что такое ДИ</a></li>
+					<li><a href="#" class="scroll-to" data-target=".block12 h3">Что такое ДИ</a></li>
 					<li><a href="#" class="scroll-to" data-target=".block5">Как это работает</a></li>
 					<li><a href="#" class="scroll-to" data-target=".block9 .wrapper">ДИ-1</a></li>
-					<li><a href="#" class="scroll-to" data-target=".block12 .photo-container">Тренеры</a></li>
+					<li><a href="#" class="scroll-to" data-target=".block12 h3">Тренеры</a></li>
 					<li><a href="#" class="scroll-to" data-target=".footer">Контакты</a></li>
 				</ul>
 			</div>	
@@ -39,7 +39,7 @@
 			</div>	
 			<div class="block-right">
 				<div class="text">
-					<h5>Живые тренинги</h5>
+					<h5>Живые тренинги <br> ДИ-1</h5>
 					<div class="icon">
 						<i class="fa fa-ship"></i>
 					</div>
@@ -59,7 +59,7 @@
 					<p class="data">03 - 05 июля</p>
 					<p class="name">Павел Двойнишников, <br>  Сабина Ефремова</p>
 					<div class="icon-bottom">
-						<a href="#" class="scroll-to" data-target=".block12 .photo-container">
+						<a href="#" class="scroll-to" data-target=".block1">
 							<img src="images/icon-header.png">
 						</a>
 					</div>
@@ -78,7 +78,7 @@
 			<!-- <div class="selection-trainer">
 				<p>Выбрать тренера</p>
 			</div> -->
-			<a href="#" class="sign-up scroll-to" data-target=".block12 .photo-container">Выбрать тренера</a>
+			<a href="#" class="sign-up scroll-to" data-target=".block12 h3">Выбрать тренера</a>
 		</section>
 		<section class="block3">
 			<div class="wrapper">
@@ -104,7 +104,7 @@
 		</section>
 		<section class="block5">
 			<div class="wrapper">
-				<h4>Вот как работают реинтеграции. Представьте, что сможете делать так когда угодно</h4>
+				<h4><span class="bold">Вот как работают реинтеграции. </span><br> Представьте, что сможете делать так когда угодно</h4>
 				<div class="video">
 					<iframe width="620" height="430" src="http://zews.software-dowlatow.ru/mediaembed/cqB0O2QTa91435061421" frameborder="0" allowfullscreen></iframe>
 				</div>
@@ -124,7 +124,7 @@
 			<div class="DI-1">
 				<div class="wrapper">
 					<h6>А научиться самостоятельно проводить реинтеграции вы можете на курсе «ДИ-1».</h6>
-					<a href="#" class="btn ghost scroll-to" data-target=".block9 h2">
+					<a href="#" class="btn ghost scroll-to" data-target=".block9">
 						Узнать, что такое курс «ДИ-1»
 					</a>
 				</div>
@@ -144,7 +144,7 @@
 			<div class="course-DI1">
 				<div class="wrapper">
 					<h6>Единственный способ подняться на этот уровень (и получить шанс пойти выше, к ещё большим возможностям) – пройти курс «ДИ-1»</h6>
-					<a href="#" class="btn ghost scroll-to"  data-target=".block9 h2">
+					<a href="#" class="btn ghost scroll-to"  data-target=".block9">
 						Узнать, что такое курс ДИ-1»
 					</a>
 				</div>
@@ -157,7 +157,9 @@
 				<p>Вы можете получить доступ к реинтеграциям, попробовать их – и рано или поздно прийти к выводу, что нужно научиться проводить их для себя самостоятельно.</p>
 				<p>А можете сразу пойти на курс «ДИ-1». И сэкономить время и деньги – потому как в открытом доступе реинтеграций нет.</p>
 				<div class="icon">
-					<img src="images/icon-block8.png">
+					<a href="#" class="btn ghost scroll-to"  data-target=".block9">
+						<img src="images/icon-block8.png">
+					</a>
 				</div>
 			</div>	
 		</section>
@@ -179,9 +181,6 @@
 			<div class="wrapper">
 				<h1>Постройте нового, лучшего себя</h1>
 				<p>Это не намного сложней, чем собирать <br> конструктор LEGO</p>
-				<div class="icon">
-					<img src="images/icon-block10.png">
-				</div>
 			</div>	
 		</section>
 		<section class="block11">
@@ -293,7 +292,7 @@
 							</tr>
 						</tbody>
 					</table>
-					<a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2039" target="_blank" class="sign-up">Войти в группу Александра</a>
+					<a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2041" target="_blank" class="sign-up">Войти в группу Александра</a>
 				</div>
 			</div>
 		</section>
@@ -628,11 +627,11 @@
 		<section class="footer">
 			<div class="menu-container">
 				<ul class="menu">
-					<li><a href="#" class="scroll-to" data-target=".block1 h2">Что такое ДИ</a></li>
+					<li><a href="#" class="scroll-to" data-target=".block12 h3">Что такое ДИ</a></li>
 					<li><a href="#" class="scroll-to" data-target=".block5">Как это работает</a></li>
 					<li class="up"><a href="#" class="scroll-to" data-target=".header">Вверх</a></li>
 					<li><a href="#" class="scroll-to" data-target=".block9 .wrapper">ДИ-1</a></li>
-					<li><a href="#" class="scroll-to" data-target=".block12 .photo-container">Тренеры</a></li>
+					<li><a href="#" class="scroll-to" data-target=".block12 h3">Тренеры</a></li>
 					<li><a href="#" class="scroll-to" data-target=".footer">Контакты</a></li>
 				</ul>
 			</div>
