самые последние изменения

--- a/di/index.html
+++ b/di/index.html
@@ -289,7 +289,7 @@
 							<tr>
 								<td>26-28 июня</td>
 								<td>Санкт-Петербург</td>
-								<td>40 000 рублей</td>
+								<td>5 000 руб. <br><br> 40 000 руб.</td>
 								<td><a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2039" target="_blank" class="sign-up">Забронировать место</a>
 								<a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2040" target="_blank" class="sign-up">Оплатить участие</a>
 								</td>
@@ -379,80 +379,16 @@
 							<tr>
 								<td>3-5 июля</td>
 								<td>Самара</td>
-								<td>30.000 руб. до 29 июня, <br>
-								с 29 июня 40.000 руб.</td>
+								<td>5 000 руб. <br><br> до 29 июня 30 000 руб.</td>
 								<td><a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2068" target="_blank" class="sign-up">Забронировать место</a>
 								<a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2069" target="_blank" class="sign-up">Оплатить участие</a></td>
 							</tr>
 							<tr>
 								<td>17-19 июля</td>
 								<td>Ростов-на-Дону</td>
-								<td>30.000 руб. до 1 июля,<br> с 1 июля 40.000 руб.</td>
+								<td>5 000 руб. <br><br> до 1 июля 30 000 руб.</td>
 								<td><a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2072" target="_blank" class="sign-up">Забронировать место</a>
 								<a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2073" target="_blank" class="sign-up">Оплатить участие</a></td>
-							</tr>
-							<tr>
-								<td>31 июля - 2 августа</td>
-								<td>Иркутск</td>
-								<td>30.000 руб. до 1 июля,<br> с 1 июля 40.000 руб.</td>
-								<td><a href="#" target="_blank" class="sign-up">Забронировать место</a>
-								<a href="#" target="_blank" class="sign-up">Оплатить участие</a></td>
-							</tr>
-							<tr>
-								<td>14­16 августа</td>
-								<td>Екатеринбург</td>
-								<td>30.000 руб. до 14 июля,<br> с 14 июля 40.000 руб.</td>
-								<td><a href="#" target="_blank" class="sign-up">Забронировать место</a>
-								<a href="#" target="_blank" class="sign-up">Оплатить участие</a></td>
-							</tr>
-							<tr>
-								<td>28-30 августа</td>
-								<td>Краснодар</td>
-								<td>30.000 руб. до 28 июля,<br>
-								с 28 июля 40.000 руб.</td>
-								<td><a href="#" target="_blank" class="sign-up">Забронировать место</a>
-								<a href="#" target="_blank" class="sign-up">Оплатить участие</a></td>
-							</tr>
-							<tr>
-								<td>4-6 сентября</td>
-								<td>Уфа</td>
-								<td>30.000 руб. до 4 августа,<br>
-								с 4 августа 40.000 руб.</td>
-								<td><a href="#" target="_blank" class="sign-up">Забронировать место</a>
-								<a href="#" target="_blank" class="sign-up">Оплатить участие</a></td>
-							</tr>
-							<tr>
-								<td>18-20 сентября</td>
-								<td>Сочи</td>
-								<td>30.000 руб. до 18 августа,<br>
-								с 18 августа 40.000 руб.</td>
-								<td><a href="#" target="_blank" class="sign-up">Забронировать место</a>
-								<a href="#" target="_blank" class="sign-up">Оплатить участие</a></td>
-							</tr>
-							<tr>
-								<td>2-4 октября</td>
-								<td>Новосибирск</td>
-								<td>30.000 руб. до 2 сентября,<br>
-								с 2 сентября 40.000 руб.</td>
-								<td><a href="#" target="_blank" class="sign-up">Забронировать место</a>
-								<a href="#" target="_blank" class="sign-up">Оплатить участие</a></td>
-							</tr>
-							<tr>
-								<td>16-18 октября</td>
-								<td>Волгоград</td>
-								<td>30.000 руб. до 16 сентября,<br>
-								с 16 сентября 40.000 руб.</td>
-								<td><a href="#" target="_blank" class="sign-up">Забронировать место</a>
-								<a href="#" target="_blank" class="sign-up">Оплатить участие</a></td>
-							</tr>
-							<tr>
-								<td>30 октября-1 ноября</td>
-								<td>Тюмень</td>
-								<td>30.000 руб. до 30 сентября,<br>
-								с 30 сентября 40.000 руб.</td>
-								<td><a href="#" target="_blank" class="sign-up">Забронировать место</a>
-								<a href="#" target="_blank" class="sign-up">Оплатить участие</a></td>
-							</tr>
 						</tbody>
 					</table>
 				</div>
@@ -531,16 +467,9 @@
 							<tr>
 								<td>17-19 июля</td>
 								<td>Москва</td>
-								<td>30.000 руб. до 1 июля, <br> с 1 июля 40.000 руб.</td>
+								<td>5 000 руб. <br><br> до 1 июля 30 000 руб.</td>
 								<td><a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2070" target="_blank" class="sign-up">Забронировать место</a>
 								<a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2071" target="_blank" class="sign-up">Оплатить участие</a></td>
-							</tr>
-							<tr>
-								<td>7-8 августа</td>
-								<td>Москва</td>
-								<td>30.000 руб. до 7 июля, <br> с 7 июля 40.000 руб.</td>
-								<td><a href="#" target="_blank" class="sign-up">Забронировать место</a>
-								<a href="#" target="_blank" class="sign-up">Оплатить участие</a></td>
 							</tr>
 						</tbody>
 					</table>
@@ -639,14 +568,14 @@
 							<tr>
 								<td>3-5 июля</td>
 								<td>Одесса</td>
-								<td>30.000 руб до 29 июня, <br> с 29 июня 40.000 руб.</td>
+								<td>5 000 руб. <br><br> до 29 июня 30 000 руб.</td>
 								<td><a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2045" target="_blank" class="sign-up">Забронировать место</a>
 								<a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2046" target="_blank" class="sign-up">Оплатить участие</a></td>
 							</tr>
 							<tr>
 								<td>10-12 июля</td>
 								<td>Санкт-Петербург</td>
-								<td>30.000 руб до 1 июля, <br> с 1 июля 40.000 руб.</td>
+								<td>5 000 руб. <br><br> до 1 июля 30 000 руб.</td>
 								<td><a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2047" target="_blank" class="sign-up">Забронировать место</a>
 								<a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2048" target="_blank" class="sign-up">Оплатить участие</a></td>
 							</tr>
