--- a/di/index.html
+++ b/di/index.html
@@ -379,14 +379,14 @@
 							<tr>
 								<td>3-5 июля</td>
 								<td>Самара</td>
-								<td>5 000 руб. <br><br> до 29 июня 30 000 руб.</td>
+								<td>5 000 руб. <br><br> 30 000 руб.<br> до 29 июня</td>
 								<td><a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2068" target="_blank" class="sign-up">Забронировать место</a>
 								<a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2069" target="_blank" class="sign-up">Оплатить участие</a></td>
 							</tr>
 							<tr>
 								<td>17-19 июля</td>
 								<td>Ростов-на-Дону</td>
-								<td>5 000 руб. <br><br> до 1 июля 30 000 руб.</td>
+								<td>5 000 руб. <br><br> 30 000 руб.<br> до 1 июля</td>
 								<td><a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2072" target="_blank" class="sign-up">Забронировать место</a>
 								<a href="http://www.dowlatow.ru/ak/ak_buy_goods.php?idg=2073" target="_blank" class="sign-up">Оплатить участие</a></td>
 						</tbody>
