--- a/consult/letter.html
+++ b/consult/letter.html
@@ -7,7 +7,7 @@
 	<div class="container" style="width:600px; font-family: Arial, Verdana, sans-serif; box-sizing:border-box; -moz-box-sizing:border-box;">
 		<div class="top" style="background: url(http://psyholog4me.beta.software-dowlatow.ru/data/consult/images/letters/top-bg.jpg); height:464px; padding-left: 35px; padding-right: 35px; padding-top:5px">
 			<h1 style="font-weight:700; color:#2c3e50; font-size:22px; text-align:center;margin-top:30px; line-height:135%">Готов ваш личный кабинет консультанта.<br />Заходите и собирайте клиентов</h1>
-			<p style="color:#585f60; font-size:18px; width: 65%; margin-top: 50px; line-height:135%">Здравствуйте</p>
+			<p style="color:#585f60; font-size:18px; width: 65%; margin-top: 50px; line-height:135%">Здравствуйте!</p>
 			<p style="color:#585f60; font-size:18px; width: 65%; line-height:135%">На связи Константин Довлатов.</p>
 			<p style="color:#585f60; font-size:18px; width: 65%; line-height:135%">Я обещал создать специальный портал для выпускников Школы Коучинга - и вот он готов.</p>
 			<p style="color:#585f60; font-size:18px; width: 65%; line-height:135%; margin-bottom:20px">Это ваш личный онлайн-кабинет, в котором вы будете принимать клиентов на консультации.</p>
