--- a/consult/letter2.html
+++ b/consult/letter2.html
@@ -24,7 +24,11 @@
 				<li style="color:#585f60; font-size:18px; line-height:135%; margin-bottom: 10px; padding-left: 30px; background: url(http://psyholog4me.beta.software-dowlatow.ru/data/consult/images/letters/check.jpg) left 5px no-repeat;;">Шанс показать свою экспертность и профессионализм в статьях, аудио и видеороликах</li>
 			</ul>
 			<h2 style="text-align:center; color:#2c3e50; font-size:20px; line-height:135%; margin-top: 40px; font-weight:normal">Регистрируйтесь сейчас. Вы сможете бесплатно пользоваться порталом до 31 августа. Заполняйте профиль и заводите первых клиентов.</h2>
-			<a href="http://www.consult4me.ru/consult/" class="btn" style="display: block; text-align: center;margin-top:40px; margin-bottom:40px;"><img src="http://psyholog4me.beta.software-dowlatow.ru/data/consult/images/letters/button.jpg"></a>
+			<a href="http://www.consult4me.ru/consult/" class="btn" style="display: block; text-align: center;margin-top:55px; margin-bottom:40px;"><img src="http://psyholog4me.beta.software-dowlatow.ru/data/consult/images/letters/button.jpg"></a>
+			<p style="color:#585f60; font-size:18px; text-align:center; line-height:135%; margin-top:60px; margin-bottom:30px;">
+				С любовью и уважением,<br />
+Константин Довлатов
+			</p>
 		</div>
 	</div>
 </body>
