--- a/consult/letter3.html
+++ b/consult/letter3.html
@@ -16,8 +16,8 @@
 			</div>
 			<p style="color: #7f8c8d; font-size: 16px; text-align: center; margin-top: 20px;">ТОП-5 лучших коучей по итогам прошедшей недели!</p>
 			<div class="consult">
-				<div class="img-container">
-					<img src="letter3/01.jpg" />
+				<div class="img-container" style="border-radius:110px; width: 110px; height: 110px; overflow: hidden; border:solid 1px #888 ">
+					<img src="letter3/01.jpg" style="display:block; width: 100%;"/>
 				</div>
 				<p class="name">
 					<a href="#"><span>Кокорев</span><br />Александр</a>
