--- a/consult/letter3.html
+++ b/consult/letter3.html
@@ -47,8 +47,10 @@
 		<div class="questions">
 			<h2>Отвечает консультант</h2>
 			<div class="item">
-				<div class="question">
-					<div class="text"></div>
+				<div class="question" style="background: #f9f9f9; padding-top: 30px; padding-bottom: 30px;">
+					<div class="text" style="width: 450px;margin:auto;padding-left: 50px; background: url('letter3/quote.png') no-repeat left top;color: #7f8c8d; font-size: 14px; font-style: italic; line-height:24px">
+						Здравствуйте. Пишу вам, а сама рыдаю. Я очень люблю своего мужа. Мы с ним прожили вместе 3 года. Но недавно, примерно пол года назад, я устроилась на новую работу. По началу было терпимо, но последние три месяца я просто не вылезала из офиса. Постоянно были какие-то срочные дела, что-то нужно было доделывать, чуть ли не ночью. И так случилось, что мы с мужем почти не виделись…
+					</div>
 				</div>
 				<div class="answer">
 					<div class="author">
